# puc-drone-battle-rust

./: .gitignore  README.md  config.json
docs/: estrutura.md  example.graphics.json  funcionamento.md
drone-battle/: Cargo.toml  Dockerfile  config.json
drone-battle/src/: api.rs  main.rs
drone-battle/src/api/: ai.rs  bot.rs  comms.rs  config.rs  enums.rs  graphics.rs  map.rs  structs.rs
drone-battle/src/api/graphics/: connection.rs  data.rs
drone-battle/src/api/map/: logic.rs  node.rs  path.rs  query.rs  update.rs
graphics/: connection.py  display.py  main.py  requirements.txt
