[package]
name = "puc-drone-battle"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Guimarães <github.com/Leinadium>"]
repository = "https://github.com/Leinadium/puc-drone-battle-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
