[package]
name = "puc-drone-battle"
version = "0.1.0"
edition = "2021"
authors = ["Daniel Guimarães <github.com/Leinadium>"]
repository = "https://github.com/Leinadium/puc-drone-battle-rust"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
rand = "0.8.4"
ctrlc = "3.2.1"
pathfinding = "3.0.9"
ordered-float = "2.10.0"